cmake_minimum_required(VERSION 2.6)

file(GLOB HEADERFILES1 "${CMAKE_CURRENT_SOURCE_DIR}/RtORB/*.h")

file(GLOB HEADERFILES2 "${CMAKE_CURRENT_SOURCE_DIR}/RtORB/*.hh")


install(FILES ${HEADERFILES1} ${HEADERFILES2} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/RtORB)

file(GLOB HEADERFILES3 "${CMAKE_CURRENT_SOURCE_DIR}/RtORB/functions/*.h")
file(GLOB HEADERFILES4 "${CMAKE_CURRENT_SOURCE_DIR}/RtORB/functions/*.hh")

install(FILES ${HEADERFILES3} ${HEADERFILES4} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/RtORB/functions)
